tests/should-fail/shift-error.fk

-- #desc The interfaces supplied to lift must occur in the ambient
-- #return Adaptor Console --0--> ([],1) is not a valid adaptor in ambient [£] (line 9 , column 10)

num : {Int}
num! = 2

main : {Int}
main! = <-Console> num!
